kubernetes/apps/external-services/app/zigbee.yaml
---
# Zigbee2MQTT - External device on LAN
apiVersion: v1
kind: Service
metadata:
  name: zigbee
  namespace: external-services
  labels:
    app.kubernetes.io/name: zigbee
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: zigbee
  namespace: external-services
  labels:
    kubernetes.io/service-name: zigbee
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8080
endpoints:
  - addresses:
      - "192.168.1.173"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee
  namespace: external-services
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - zigbee.iacob.uk
  rules:
    - backendRefs:
        - name: zigbee
          port: 8080
